test/files/neg/minimal_nonexistent.check
minimal_nonexistent.scala:3: error: not found: foo
@minimal("foo", "bar", "baz")
         ^
minimal_nonexistent.scala:5: error: @minimal may only name methods, found variable bar
  var bar = 1
      ^
minimal_nonexistent.scala:6: error: @minimal may only name methods, found value baz
  val baz = 2
      ^
three errors found
